--- a/templates/index.html
+++ b/templates/index.html
@@ -8,22 +8,25 @@
 </head>
 <body>
     <header>
-    <h1>Intelligent Scheduler for Emergency Department</h1>
-    <nav>
-    <ul>
-        <li><a href="#explore">Home</a></li>
-        <li><a href="https://github.com/wang2653/Building-an-Intelligent-Job-Scheduler-for-Optimized-Request-Assignment">About</a></li>
-        <li><a href="#contact">Contact</a></li>
-        <li class="dropdown">
-            <a href="#">Login</a>
-            <ul class="dropdown-content">
-              <li><a href="/login">Doctor</a></li>
-              <li><a href="#">Patient</a></li>
-            </ul>
-        </li>
+        <div class="header-left">
+            <img src="../static/logo.png" alt="Logo" class="logo" />
+            <h2>Intelligent Scheduler<br>for Emergency Department</h2>
+        </div>
+        <nav>
+        <ul>
+            <li><a href="#explore">Home</a></li>
+            <li><a href="https://github.com/wang2653/Building-an-Intelligent-Job-Scheduler-for-Optimized-Request-Assignment">About</a></li>
+            <li><a href="#contact">Contact</a></li>
+            <li class="dropdown">
+                <a href="#">Login</a>
+                <ul class="dropdown-content">
+                <li><a href="/login">Doctor</a></li>
+                <li><a href="#">Patient</a></li>
+                </ul>
+            </li>
 
-    </ul>
-    </nav>
+        </ul>
+        </nav>
     </header>
     <main>
     <section id="explore" class="explore">
