modify website logo

--- a/templates/index.html
+++ b/templates/index.html
@@ -9,7 +9,7 @@
 <body>
     <header>
         <div class="header-left">
-            <img src="../static/logo.png" alt="Logo" class="logo" />
+            <img src="../static/logo2.png" alt="Logo" class="logo" />
             <h2>Intelligent Scheduler<br>for Emergency Department</h2>
         </div>
         <nav>
